--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,89 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
+# Compilados
+dist/
+out-tsc/
+.build/
 
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
+# Dependências
+node_modules/
 
-# IDEs and editors
+# Ambiente
+.env
+.env.*.local
+
+# IDEs e editores
 .idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
+# Sistema operacional
 .DS_Store
 Thumbs.db
+
+# Ferramentas de CI/CD
+/.circleci/
+/.husky/
+.nyc_output/
+coverage/
+
+# Angular Cache
+.angular/cache/
+
+# Angular CLI Configuração local
+.angular/
+
+# Relatórios
+reports/
+test-results/
+
+# Coverage
+coverage/
+lcov-report/
+
+# Configurações locais de usuários
+.editorconfig
+package-lock.json
+
+# Outras configurações e backups temporários
+*.tmp
+*.bak
+*.old
+*.orig
+*.rej
+*.seed
+*.pid
+*.pid.lock
+
+# Arquivos específicos para bibliotecas
+.sass-cache/
+*.pyc
+*.pyo
+*.pyd
+
+# MacOS
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*.~lock.*
+~$*
+
+# Configuração de Git
+.git/
+*.gitignore
